--- a/index.html
+++ b/index.html
@@ -6,12 +6,51 @@
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
   </head>
+
   <body class="container" ng-controller="StoreController as store">
-    <div class="product row" ng-repeat="product in store.products">
-      <h1> {{product.name}}
-      <em class="pull-right"> {{product.price | currency }}
-      </h1>
-        <button ng-show="store.product.canPurchase">Add to Cart</button>
+    <h1 class="text-center"> My Gem Store </h1>
+    <h2 class="text-center"> Practice with Angular </h2>
+    <!-- Products Container -->
+    <div class="list-group">
+      <!-- Product Container -->
+      <div class="list-group-item" ng-repeat="product in store.products">
+        <h3> {{product.name}}
+        <em class="pull-right"> {{product.price | currency }}</em>
+        </h3>
+
+       <!-- Image Gallery  -->
+      <div class="gallery" ng-controller="GalleryController as gallery" ng-show="product.images.length">
+        <div class="img-wrap">
+          <img ng-src="{{product.images[gallery.current]}}" />
+        <ul class="list-inline thumbs">
+          <li class="thumbnail" ng-repeat="image in product.images">
+            <img ng-src="{{image}}" />
+          </li>
+        </ul>
+      </div>
+
+      <section class="tab" ng-controller="TabController as tab">
+        <ul class="nav nav-pills">
+          <li ng-class="{ active: tab.isSet(1) }">
+            <a href ng-click="tab.setTab(1)">Description</a></li>
+          <li ng-class="{ active: tab.isSet(2) }">
+            <a href ng-click="tab.setTab(2)">Specs</a></li>
+          <li ng-class="{ active: tab.isSet(3) }">
+            <a href ng-click="tab.setTab(3)">Reviews</a></li>
+        </ul>
+        <div ng-show="tab.isSet(1)">
+          <h4>Description</h4>
+          <blockquote>{{product.description}}</blockquote>
+        </div>
+        <div ng-show="tab.isSet(2)">
+          <h4>Specs</h4>
+          <blockquote>Shine: {{product.shine}}</blockquote>
+        </div>
+        <div ng-show="tab.isSet(3)">
+          <h4>Reviews</h4>
+        </div>
+      </section>
+      </div>
     </div>
     <script type="text/javascript" src="./lib/app.js"></script>
   </body>
